--- a/catia_launcher/gui/catia_launcher_gui.ui
+++ b/catia_launcher/gui/catia_launcher_gui.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>CATIA V5 Launcher</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -33,6 +33,7 @@
        <widget class="QLabel" name="label">
         <property name="font">
          <font>
+          <pointsize>12</pointsize>
           <weight>75</weight>
           <bold>true</bold>
          </font>
@@ -109,7 +110,7 @@
         <item alignment="Qt::AlignHCenter">
          <widget class="QCheckBox" name="checkbox_user_files">
           <property name="toolTip">
-           <string>Delete the users CATIA user specific settings folder.</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Opens folder containing the user specific CATIA settings folder.&lt;br/&gt;&lt;br/&gt;Deletion of all the files in this folder resets CATIA to it's default configuration.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="layoutDirection">
            <enum>Qt::LeftToRight</enum>
@@ -122,7 +123,7 @@
         <item alignment="Qt::AlignHCenter">
          <widget class="QCheckBox" name="checkbox_temp_files">
           <property name="toolTip">
-           <string>Delete all files in the users temporary folder.</string>
+           <string>Opens the users CATIA temporary files folder.</string>
           </property>
           <property name="layoutDirection">
            <enum>Qt::LeftToRight</enum>
@@ -211,13 +212,13 @@
      <height>22</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuAbout">
+   <widget class="QMenu" name="menuHelp">
     <property name="title">
-     <string>About</string>
+     <string>Help</string>
     </property>
     <addaction name="actionAbout"/>
    </widget>
-   <addaction name="menuAbout"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar">
    <property name="statusTip">
